employee-service-web/Openshift/Deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-postgres-db
  namespace: india-dev
  labels:
    app: employee-postgres-db
    app.kubernetes.io/part-of: karma-kebab-app
    app.openshift.io/runtime: PostgreSQL
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-postgres-db
  template:
    metadata:
      labels:
        app: employee-postgres-db
    spec:
      containers:
        - name: employee-postgres-db
          image: quay.io/dewicabret/postgres-mirror:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: postgres-init-script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-db-pvc
        - name: postgres-init-script
          configMap:
            name: postgres-init-script

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: india-dev
  labels:
    app: employee-postgres-db
spec:
  selector:
    app: employee-postgres-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: employee-service-web
  labels: 
    app: employee-service-web
    app.kubernetes.io/part-of: karma-kebab-app 
    app.openshift.io/runtime: dotnet
spec:
  replicas: 1
  selector: 
     matchLabels: 
      app: employee-service-web
  template:
    metadata: 
      labels: 
        app: employee-service-web
    spec:
      containers:
        - name: employee-service-web-container
          image: aizazahsan23/employee-service-web 
          ports: 
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata: 
  name: employee-service-web-svc
spec: 
  selector: 
    app: employee-service-web
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---

apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  name: employee-service-web-route
  namespace: india-dev
spec: 
  to: 
    kind: Service
    name: employee-service-web-svc
  port: 
    targetPort: 8080
  tls: 
    termination: edge
  wildcardPolicy: None
